# keep-base

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .rumdl.toml  .yamlfix.toml  .yamllint.yml  Makefile  README.md  SETUP.md  dprint.json  pyproject-fmt.toml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  mirror.yml  publish.yml
docs/: api.rst  conf.py  index.rst
docs/_templates/autosummary/: module.rst
docs/guide/: configuration.rst  getting-started.rst  installation.rst
src/keep/: __init__.py  cli.py  graph.py  index.py  lint.py  logging.py  settings.py  state.py
src/keep/data/: keep.yml  schema.yml
src/keep/utils/: extensions.py  frontmatter.py  hashing.py
tasks/: docs.make  gen.make  json.make  md.make  precommit.make  py.make  toml.make  yaml.make
tests/: conftest.py  test_cli.py  test_extensions.py  test_graph.py  test_hashing.py  test_index.py  test_lint.py  test_settings.py  test_state.py
tests/fixtures/workspace/: keep.yml
tests/utils/: test_frontmatter.py
